[project]
name = "vision-agent-experiments"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "Adrian Stritzinger", email = "Adrian.Stritzinger@askui.com"},
]
dependencies = [
    "pydantic-settings>=2.6.1",
    "askui>=0.1.11",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "-"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm.scripts]
vae = {cmd = "python -m vision_agent_experiments"}
